tests/NormalTests/paczka1/small_fuzzy/43173042.err
Error in line 6: WN1Y7tqvd A675 87,0
Error in line 3: S991 A675 24,6
